added material icon and typography dependancy -changed the icon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,9 +3,14 @@
   "name": "News Lite",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "icon.png",
+      "sizes": "192*192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512*512",
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
