--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "date-fns": "^1.29.0",
     "history": "^4.7.2",
+    "material-icons-react": "^1.0.0",
     "radium": "^0.24.0",
     "react": "^16.3.2",
     "react-animations": "^1.0.0",
@@ -18,7 +19,8 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.3.1",
-    "semantic-ui-react": "^0.80.0"
+    "semantic-ui-react": "^0.80.0",
+    "typeface-roboto": "^0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
