--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.2",
     "react-animations": "^1.0.0",
     "react-dom": "^16.3.2",
+    "react-media": "^1.8.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
