--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,27 @@
   "name": "News Lite",
   "icons": [
     {
+      "src": "icon-96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
       "src": "icon.png",
-      "sizes": "192*192",
+      "sizes": "192x192",
       "type": "image/png"
     },
     {
       "src": "icon-512.png",
-      "sizes": "512*512",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
