--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "D": "^1.0.0",
     "date-fns": "^1.29.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -19,6 +20,7 @@
     "react-swipeable-routes": "^0.4.1",
     "react-test-renderer": "^16.4.1",
     "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0",
     "typeface-roboto": "^0.0.54"
