--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+node_modules
+client/node_modules
+server/node_modules
+client/build
+server/build
 
 # testing
-/coverage
+coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-.env.development
-.env.production
+.yarnclean
+npm-debug.log
+yarn-error.log
+*.rdb
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.env.production
