--- a/package.json
+++ b/package.json
@@ -1,38 +1,23 @@
 {
-  "name": "news-lite",
-  "version": "0.1.0",
-  "private": true,
+  "name": "NewsLite",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {},
+  "proxy": "http://localhost:3001",
+  "license": "MIT",
+  "engines": {
+    "node": "11.4.0"
+  },
   "dependencies": {
-    "D": "^1.0.0",
-    "date-fns": "^1.29.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "history": "^4.7.2",
-    "material-icons-react": "^1.0.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-media": "^1.8.0",
-    "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4",
-    "react-swipeable-routes": "^0.4.1",
-    "react-test-renderer": "^16.4.1",
-    "redux": "^4.0.0",
-    "redux-mock-store": "^1.5.3",
-    "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.2.0",
-    "typeface-roboto": "^0.0.54"
+    "concurrently": "^3.1.0",
+    "rimraf": "^2.5.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "sw-precache-webpack-plugin": "^0.11.5",
-    "webpack-pwa-manifest": "^3.6.2"
+    "build": "concurrently \"cd client && yarn build\" \"cd server && yarn build\"",
+    "clean": "concurrently \"rimraf node_modules\" \"cd client && rimraf node_modules build\" \"cd server && rimraf node_modules build\"",
+    "heroku-postbuild": "yarn build",
+    "install": "(cd client && yarn) && (cd server && yarn)",
+    "start": "concurrently \"cd client && PORT=3000 yarn start\" \"cd server && PORT=3001 yarn start\"",
+    "start:prod": "cd server && yarn start:prod"
   }
 }
